# pypercrypt

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
src/: pypercrypt.py  pyproject.toml
src/pypercrypt/: __init__.py  __main__.py  main.py
